# OOP_2

./: .gitignore  CMakeLists.txt  eqinterface.h  gym.cpp  main.cpp
bprinter-master/include/bprinter/: table_printer.h
include/: classes.hpp  consolemanipulator.h  data.hpp  eqinterface.h  filemanager.h  get_fromkb.hpp  get_num.h  gym.hpp  menu_func.hpp  procesing_entry.hpp
src/: consolemanipulator.cpp  eqinterface.cpp  filemanager.cpp  gym.cpp
unit_test/: test_separat_word.cpp  unit_test.hpp
